--- a/webs/words-web/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/webs/words-web/docroot/WEB-INF/liferay-plugin-package.properties
@@ -1,9 +1,9 @@
 name=Words
 module-group-id=liferay
 module-incremental-version=1
-tags=theme, utility
-short-description=This provides a web service for checking the spelling of words.
-long-description=The words web service is required for the Liferay SpellChecker to work.<br /><br />This app installs as a Liferay service.
+tags=
+short-description=
+long-description=
 change-log=
 page-url=http://www.liferay.com
 author=Liferay, Inc.
