LPS-42707 Ant task to support the compilation of Scala files

--- a/build.properties
+++ b/build.properties
@@ -293,6 +293,16 @@
     #plugins.war.excludes=**/WEB-INF/service/**,**/WEB-INF/src/**
 
 ##
+## Scala compiler
+##
+    
+    #
+    # Set the compiler parameters to specify custom settings which will be used during
+    # the Scala source code compilation process
+    #
+    scala.compiler.parameters=
+
+##
 ## Sonatype
 ##
 
