--- a/portlets/microblogs-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/portlets/microblogs-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -5,11 +5,11 @@ followers=Followers
 leave-a-comment=Leave a comment...
 mentions=Mentions
 repost=Repost
-reposted-from=Reposted From
-says=says
 there-are-no-microblog-entries=There are no microblog entries.
 timeline=Timeline
 update-your-status=Update your status...
 viewable-by=Viewable By
 x-does-not-have-any-microblog-entries={0} does not have any microblog entries.
+x-reposted-from-x={0} reposted from {1}
+x-says={0} says
 you-do-not-have-any-microblog-entries=You do not have any microblog entries.
