--- a/shared/servlet-jstl-shared/build.xml
+++ b/shared/servlet-jstl-shared/build.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 
 <project name="servlet-jstl-shared" basedir="." default="compile">
+	<property name="import.compat.shared" value="false" />
 	<property name="plugin.version" value="1" />
 
 	<import file="../../build-common-osgi-plugin.xml" />
