--- a/shared/test-module-framework-shared/build.xml
+++ b/shared/test-module-framework-shared/build.xml
@@ -2,6 +2,7 @@
 <!DOCTYPE project>
 
 <project name="test-module-framework-shared" basedir="." default="deploy">
+	<property name="import.compat.shared" value="false" />
 	<property name="plugin.version" value="1" />
 
 	<import file="../../build-common-osgi-plugin.xml" />
