LPS-43460 Add portal.dir so that we can copy java source from portal

--- a/build.properties
+++ b/build.properties
@@ -199,10 +199,10 @@
 
     #
     # Set the directory that will be used to generate a plugin's JRebel
-	# configuraton file. Not specifying a directory means that the generated
-	# JRebel configuration file will be placed in a plugin's compiled classes
-	# output directory. This is also the directory that JRebel will use to look
-	# for updated classes.
+    # configuraton file. Not specifying a directory means that the generated
+    # JRebel configuration file will be placed in a plugin's compiled classes
+    # output directory. This is also the directory that JRebel will use to look
+    # for updated classes.
     #
     #jrebel.plugin.classes.dir=
 
@@ -283,7 +283,7 @@
 
     #
     # Set this to true to optimize the size of plugin WAR files by not included
-	# portal dependencies that will can injected at deploy time.
+    # portal dependencies that will can injected at deploy time.
     #
     plugins.war.clean.portal.dependencies=true
 
@@ -292,6 +292,12 @@
     # plugin WAR.
     #
     #plugins.war.excludes=**/WEB-INF/service/**,**/WEB-INF/src/**
+
+##
+## Portal
+##
+
+    portal.dir=${sdk.dir}/../liferay-portal
 
 ##
 ## Sonatype
