--- a/shared/sync-engine-shared/ivy.xml
+++ b/shared/sync-engine-shared/ivy.xml
@@ -8,7 +8,15 @@
 	<info module="sync-engine-shared" organisation="com.liferay" />
 
 	<dependencies defaultconf="default">
+		<dependency name="commons-codec" org="commons-codec" rev="1.8" />
+		<dependency name="commons-io" org="commons-io" rev="2.4" />
+		<dependency name="commons-logging" org="commons-logging" rev="1.1.3" />
+		<dependency name="h2" org="com.h2database" rev="1.3.174" />
+		<dependency name="httpclient" org="org.apache.httpcomponents" rev="4.2.5" />
+		<dependency name="httpcore" org="org.apache.httpcomponents" rev="4.2.4" />
 		<dependency name="ormlite-core" org="com.j256.ormlite" rev="4.47" />
 		<dependency name="ormlite-jdbc" org="com.j256.ormlite" rev="4.47" />
+		<dependency name="slf4j-api" org="org.slf4j" rev="1.7.5" />
+		<dependency name="slf4j-log4j12" org="org.slf4j" rev="1.7.5" />
 	</dependencies>
 </ivy-module>
