--- a/shared/sync-engine-shared/.classpath
+++ b/shared/sync-engine-shared/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry excluding="**/.svn/**|.svn/" kind="src" path="src" />
 	<classpathentry kind="src" path="/portal-master" />
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER" />
-	<classpathentry excluding="**/.svn/**|.svn/" kind="src" path="test/integration" />
+	<classpathentry excluding="**/.svn/**|.svn/" kind="src" path="test/unit" />
 	<classpathentry kind="lib" path="/portal-master/lib/development/junit.jar" />
 	<classpathentry kind="lib" path="/portal-master/lib/development/mockito.jar" />
 	<classpathentry kind="lib" path="/portal-master/lib/development/powermock-mockito.jar" />
@@ -27,6 +27,11 @@
 	<classpathentry kind="lib" path="lib/h2.jar" />
 	<classpathentry kind="lib" path="lib/httpclient.jar" />
 	<classpathentry kind="lib" path="lib/httpcore.jar" />
+	<classpathentry kind="lib" path="lib/httpmime.jar" />
+	<classpathentry kind="lib" path="lib/jackson-annotations.jar" />
+	<classpathentry kind="lib" path="lib/jackson-core.jar" />
+	<classpathentry kind="lib" path="lib/jackson-databind.jar" />
+	<classpathentry kind="lib" path="lib/jsr311-api.jar" />
 	<classpathentry kind="lib" path="lib/ormlite-core.jar" />
 	<classpathentry kind="lib" path="lib/ormlite-jdbc.jar" />
 	<classpathentry kind="lib" path="lib/portal-compat-shared.jar" />
