--- a/portlets/elasticsearch-portlet/docroot/WEB-INF/web.xml
+++ b/portlets/elasticsearch-portlet/docroot/WEB-INF/web.xml
@@ -7,10 +7,6 @@
 
 	<context-param>
 		<param-name>portalContextConfigLocation</param-name>
-		<param-value>/WEB-INF/classes/META-INF/elasticsearch-spring.xml</param-value>
+		<param-value>/WEB-INF/classes/META-INF/elasticsearch-spring.xml,/WEB-INF/classes/META-INF/messaging-spring.xml</param-value>
 	</context-param>
-
-	<listener>
-		<listener-class>com.liferay.portal.search.solr.servlet.SolrServletContextListener</listener-class>
-	</listener>
 </web-app>
