LPS-44076 Add missing language keys

--- a/portlets/knowledge-base-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/portlets/knowledge-base-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -1,3 +1,6 @@
+comments=Comments
+templates=Templates
+
 action.ADD_KB_ARTICLE=Add Article
 action.ADD_KB_TEMPLATE=Add Template
 action.ADMINISTRATOR=Administrator
