sync-engine-shared - Forgot updated properties

--- a/shared/sync-engine-shared/src/sync.properties
+++ b/shared/sync-engine-shared/src/sync.properties
@@ -1,4 +1,5 @@
 sync.configuration.directory=${user.home}/.liferay-sync
 sync.database.name=sync
+sync.ignore.file.names=.DS_Store,Desktop.ini,Thumbs.db
 sync.logger.configuration.file=sync-log4j.xml
 sync.product.name=Liferay Sync
