LPS-44125 adding initial elastic search wiring

--- a/portlets/elasticsearch-portlet/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/portlets/elasticsearch-portlet/docroot/WEB-INF/liferay-plugin-package.properties
@@ -9,3 +9,7 @@ page-url=http://www.liferay.com
 author=Liferay, Inc.
 licenses=LGPL
 liferay-versions=7.0.0+
+
+portal-dependency-jars=\
+    commons-lang.jar,\
+	util-slf4j.jar
