sync-engine-shared - Initial model listener/notifications implementation

--- a/shared/sync-engine-shared/src/sync.properties
+++ b/shared/sync-engine-shared/src/sync.properties
@@ -1,5 +1,8 @@
 sync.configuration.directory=${user.home}/.liferay-sync
 sync.database.name=sync
 sync.ignore.file.names=.DS_Store,Desktop.ini,Thumbs.db
+sync.notification.fields.SyncAccount=
+sync.notification.fields.SyncFile=filePathName,size
+sync.notification.fields.SyncSite=
 sync.logger.configuration.file=sync-log4j.xml
 sync.product.name=Liferay Sync
