sync-engine-shared - Rolling checksum

--- a/shared/sync-engine-shared/src/sync.properties
+++ b/shared/sync-engine-shared/src/sync.properties
@@ -2,7 +2,7 @@ sync.configuration.directory=${user.home}/.liferay-sync
 sync.database.name=sync
 sync.ignore.file.names=.DS_Store,Desktop.ini,Thumbs.db
 sync.notification.field.names.SyncAccount=
-sync.notification.field.names.SyncFile=filePathName,size
+sync.notification.field.names.SyncFile=checksum,filePathName,size
 sync.notification.field.names.SyncSite=
 sync.logger.configuration.file=sync-log4j.xml
 sync.product.name=Liferay Sync
