--- a/shared/sync-engine-shared/.classpath
+++ b/shared/sync-engine-shared/.classpath
@@ -30,6 +30,7 @@
 	<classpathentry kind="lib" path="lib/httpclient.jar" />
 	<classpathentry kind="lib" path="lib/httpcore.jar" />
 	<classpathentry kind="lib" path="lib/httpmime.jar" />
+	<classpathentry kind="lib" path="lib/io-delta-shared.jar" />
 	<classpathentry kind="lib" path="lib/jackson-annotations.jar" />
 	<classpathentry kind="lib" path="lib/jackson-core.jar" />
 	<classpathentry kind="lib" path="lib/jackson-databind.jar" />
