SYNC-1199 qualify property names, reorder

--- a/webs/sync-web/docroot/WEB-INF/src/portlet.properties
+++ b/webs/sync-web/docroot/WEB-INF/src/portlet.properties
@@ -1,22 +1,22 @@
 #
-# Set this to true to cache binary file diffs.
+# Set the list of classes implementing AuthVerifier used by sync-web. See
+# portal.properties for more details on auth.verifier.pipeline.
 #
-file.diff.cache.enabled=true
+sync.auth.verifier.pipeline=com.liferay.portal.security.auth.BasicAuthHeaderAutoLogin,com.liferay.portal.security.auth.OpenSSOAutoLogin,com.liferay.portal.security.auth.SiteMinderAutoLogin
 
 #
 # Set the interval in hours for deleting expired binary file diff caches. The
 # default is one day.
 #
-file.diff.cache.delete.interval=24
+sync.file.diff.cache.delete.interval=24
+
+#
+# Set this to true to cache binary file diffs.
+#
+sync.file.diff.cache.enabled=true
 
 #
 # Set the expiration time in hours for keeping the cache of binary diffs
 # between file versions. The default is fourteen days.
 #
-file.diff.cache.expiration.time=336
-
-#
-# Set the list of classes implementing AuthVerifier used by sync-web. See
-# portal.properties for more details on auth.verifier.pipeline.
-#
-sync.auth.verifier.pipeline=com.liferay.portal.security.auth.BasicAuthHeaderAutoLogin,com.liferay.portal.security.auth.OpenSSOAutoLogin,com.liferay.portal.security.auth.SiteMinderAutoLogin
+sync.file.diff.cache.expiration.time=336
