LPS-44126 add index writer

--- a/portlets/elasticsearch-portlet/docroot/WEB-INF/src/META-INF/type_mappings.json
+++ b/portlets/elasticsearch-portlet/docroot/WEB-INF/src/META-INF/type_mappings.json
@@ -58,9 +58,9 @@
 			},
 			"keywordSearch": {
 				"index": "not_analyzed",
-				"store": "yes",
+				"index_options": "docs",
 				"omit_norms": "yes",
-				"omit_term_freq_and_positions": "yes",
+				"store": "yes",
 				"type": "string"
 			},
 			"languageId": {
