--- a/shared/sync-engine-shared/src/sync.properties
+++ b/shared/sync-engine-shared/src/sync.properties
@@ -2,8 +2,8 @@ sync.configuration.directory=${user.home}/.liferay-sync
 sync.database.name=sync
 sync.ignore.file.names=Desktop.ini,Thumbs.db
 sync.ignore.hidden.files=true
-sync.notification.field.names.SyncAccount=uiEvent
+sync.notification.field.names.SyncAccount=active,uiEvent
 sync.notification.field.names.SyncFile=checksum,filePathName,size,uiEvent
-sync.notification.field.names.SyncSite=uiEvent
+sync.notification.field.names.SyncSite=active,uiEvent
 sync.logger.configuration.file=sync-log4j.xml
 sync.product.name=Liferay Sync
