LPS-40873 Package props: add tags, short and long descriptions

--- a/portlets/chat-video-portlet/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/portlets/chat-video-portlet/docroot/WEB-INF/liferay-plugin-package.properties
@@ -1,9 +1,9 @@
 name=Chat Video
 module-group-id=liferay
 module-incremental-version=1
-tags=
-short-description=
-long-description=
+tags=video chat, audio chat, social, webrtc
+short-description=Video for Chat
+long-description=Liferay's Chat Video portlet adds video conversation capabilities to the Chat portlet using WebRTC. You should be able to create video conversations with this portlet using the original Chat portlet if your browser supports WebRTC.
 change-log=
 page-url=http://www.liferay.com
 author=Liferay, Inc.
