sync-engine-shared - Add spring-retry

--- a/shared/sync-engine-shared/ivy.xml
+++ b/shared/sync-engine-shared/ivy.xml
@@ -28,5 +28,7 @@
 		<dependency name="proxy-vole" org="com.btr" rev="20131209" />
 		<dependency name="slf4j-api" org="org.slf4j" rev="1.7.5" />
 		<dependency name="slf4j-log4j12" org="org.slf4j" rev="1.7.5" />
+		<dependency name="spring" org="org.springframework" rev="2.5.6.SEC03" />
+		<dependency name="spring-retry" org="org.springframework.retry" rev="1.0.3.RELEASE" />
 	</dependencies>
 </ivy-module>
