--- a/shared/sync-engine-shared/ivy.xml
+++ b/shared/sync-engine-shared/ivy.xml
@@ -21,7 +21,6 @@
 		<dependency name="jackson-core" org="com.fasterxml.jackson.core" rev="2.1.5" />
 		<dependency name="jackson-databind" org="com.fasterxml.jackson.core" rev="2.1.5" />
 		<dependency name="jpathwatch" org="net.sf.jpathwatch" rev="0.95" />
-		<dependency name="jsr311-api" org="javax.ws.rs" rev="1.1.1" />
 		<dependency name="log4j" org="log4j" rev="1.2.17" />
 		<dependency name="ormlite-core" org="com.j256.ormlite" rev="4.47" />
 		<dependency name="ormlite-jdbc" org="com.j256.ormlite" rev="4.47" />
@@ -30,5 +29,6 @@
 		<dependency name="slf4j-log4j12" org="org.slf4j" rev="1.7.5" />
 		<dependency name="spring" org="org.springframework" rev="2.5.6.SEC03" />
 		<dependency name="spring-retry" org="org.springframework.retry" rev="1.0.3.RELEASE" />
+		<dependency name="spring-web" org="org.springframework" rev="4.0.2.RELEASE" />
 	</dependencies>
 </ivy-module>
