sync-engine-shared - Patch files using io delta

--- a/shared/sync-engine-shared/src/sync.properties
+++ b/shared/sync-engine-shared/src/sync.properties
@@ -7,3 +7,5 @@ sync.notification.field.names.SyncFile=checksum,filePathName,size,uiEvent
 sync.notification.field.names.SyncSite=active,uiEvent
 sync.logger.configuration.file=sync-log4j.xml
 sync.product.name=Liferay Sync
+sync.file.patching.ignore.extensions=jpg
+sync.file.patching.size.ratio.threshold=5
