--- a/webs/elasticsearch-web/build.xml
+++ b/webs/elasticsearch-web/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE project>
 
-<project name="elasticsearch-portlet" basedir="." default="deploy">
-	<import file="../build-common-portlet.xml" />
+<project name="elasticsearch-web" basedir="." default="deploy">
+	<import file="../build-common-web.xml" />
 </project>
