--- a/webs/elasticsearch-web/ivy.xml
+++ b/webs/elasticsearch-web/ivy.xml
@@ -5,7 +5,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd"
 >
-	<info module="elasticsearch-portlet" organisation="com.liferay" />
+	<info module="elasticsearch-web" organisation="com.liferay" />
 
 	<dependencies defaultconf="default">
 		<dependency name="elasticsearch" org="org.elasticsearch" rev="1.0.0" />
