--- a/tools/portlet_liferay_faces_alloy_tmpl/ivy.xml
+++ b/tools/portlet_liferay_faces_alloy_tmpl/ivy.xml
@@ -11,6 +11,9 @@
 	</info>
 
 	<dependencies defaultconf="default">
+		<dependency conf="test->default" name="arquillian-junit-container" org="org.jboss.arquillian.junit" rev="1.1.3.Final" />
+		<dependency conf="test->default" name="arquillian-tomcat-remote-7" org="org.jboss.arquillian.container" rev="1.0.0.CR6" />
+		<dependency conf="test->default" name="com.liferay.ant.arquillian" org="com.liferay" rev="1.0.0-SNAPSHOT" />
 		<dependency name="jboss-el" org="org.jboss.el" rev="2.0.1.GA" />
 		<dependency name="jsf-api" org="com.sun.faces" rev="2.1.21" />
 		<dependency name="jsf-impl" org="com.sun.faces" rev="2.1.21" />
