--- a/tools/portlet_richfaces_tmpl/ivy.xml
+++ b/tools/portlet_richfaces_tmpl/ivy.xml
@@ -11,6 +11,9 @@
 	</info>
 
 	<dependencies defaultconf="default">
+		<dependency conf="test->default" name="arquillian-junit-container" org="org.jboss.arquillian.junit" rev="1.1.3.Final" />
+		<dependency conf="test->default" name="arquillian-tomcat-remote-7" org="org.jboss.arquillian.container" rev="1.0.0.CR6" />
+		<dependency conf="test->default" name="com.liferay.ant.arquillian" org="com.liferay" rev="1.0.0-SNAPSHOT" />
 		<dependency name="cssparser" org="net.sourceforge.cssparser" rev="0.9.5" />
 		<dependency name="guava" org="com.google.guava" rev="10.0.1" />
 		<dependency name="jboss-el" org="org.jboss.el" rev="2.0.1.GA" />
