--- a/portlets/microblogs-portlet/docroot/WEB-INF/src/portal.properties
+++ b/portlets/microblogs-portlet/docroot/WEB-INF/src/portal.properties
@@ -3,3 +3,4 @@ release.info.previous.build.number=0
 
 upgrade.processes=\
     com.liferay.microblogs.hook.upgrade.UpgradeProcess_1_0_0
+    com.liferay.microblogs.hook.upgrade.UpgradeProcess_1_0_1
