--- a/portlets/google-maps-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/portlets/google-maps-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -1,5 +1,5 @@
-allow-directions-address-to-be-edited=Allow Directions Address To Be Edited
-allow-map-address-to-be-edited=Allow Map Address To Be Edited
+allow-directions-address-to-be-edited=Allow directions address to be edited.
+allow-map-address-to-be-edited=Allow map address to be edited.
 bicycling=Bicycling
 directions-address=Directions Address
 directions-from=Directions From
@@ -8,7 +8,7 @@ enable-changing-traveling-mode=Enable Changing Traveling Mode
 get-directions=Get Directions
 javax.portlet.title.1_WAR_googlemapsportlet=Google Maps
 map-address=Map Address
-open-in-google-maps=Open In Google Maps
+open-in-google-maps=Open in Google Maps
 show-direction-steps=Show Direction Steps
 show-google-maps-link=Show Google Maps Link
 traveling-mode=Traveling Mode
