LPS-51324 include dependency

--- a/portlets/knowledge-base-portlet/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/portlets/knowledge-base-portlet/docroot/WEB-INF/liferay-plugin-package.properties
@@ -16,6 +16,7 @@ portal-dependency-jars=\
     jericho-html.jar,\
     jstl-api.jar,\
     jstl-impl.jar,\
+    liferay-icu4j.jar,\
     rome.jar
 
 portal-dependency-tlds=\
