--- a/build.properties
+++ b/build.properties
@@ -326,6 +326,8 @@
 ## Ivy
 ##
 
+    ivy.cache.ttl.default=eternal
+
     ivy.custom.settings.file=${sdk.dir}/ivy-settings.xml
 
     #ivy.jar.url=http://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.version}/ivy-${ivy.version}.jar
