--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,7 @@ allprojects {
 		Closure getBuildXmlProperty
 		Closure getIndent
 		Closure wrapContents
-		Closure wrapDependency
-		Closure wrapProperty
+		Closure wrapLine
 		Closure writeBuildGradleFile
 		Closure writeDependencySettingsFile
 
@@ -60,7 +59,7 @@ allprojects {
 
 			if (ivyXmlNode) {
 				ivyXmlNode.dependencies.dependency.each {
-					contents << "\t\t[group: \"${it.@org}\", name:\"${it.@name}\", version: \"${it.@rev}\"],"
+					contents.addAll(wrapLine(2, it.@org, it.@name, it.@rev))
 				}
 			}
 
@@ -75,7 +74,7 @@ allprojects {
 					File serviceJarFile = new File("${projectDir}", serviceJarFileName)
 
 					if (serviceJarFile.exists()) {
-						contents << "\t\tfiles(\"${serviceJarFileName}\"),"
+						wrapLine(2, serviceJarFileName)
 					}
 				}
 			}
@@ -104,7 +103,7 @@ allprojects {
 					println("Portal dependency " + portalDependencyJar + " is not defined in versions.gradle")
 				}
 				else {
-					contents.addAll(wrapDependency(2, portalDependencyJarMap["group"], portalDependencyJarMap["name"], portalDependencyJarMap["version"]))
+					contents.addAll(wrapLine(2, portalDependencyJarMap["group"], portalDependencyJarMap["name"], portalDependencyJarMap["version"]))
 				}
 			}
 
@@ -114,9 +113,9 @@ allprojects {
 		getBuildGradleExt = {
 			List contents = []
 
-			contents.addAll(wrapProperty(1, "osgiIdeDependencies", getBuildXmlProperty("osgi.ide.dependencies")))
-			contents.addAll(wrapProperty(1, "osgiRuntimeDependencies", getBuildXmlProperty("osgi.runtime.dependencies")))
-			contents.addAll(wrapProperty(1, "pluginFullVersion", getBuildGradleExtPluginFullVersion()))
+			contents.addAll(wrapLine(1, "osgiIdeDependencies", getBuildXmlProperty("osgi.ide.dependencies")))
+			contents.addAll(wrapLine(1, "osgiRuntimeDependencies", getBuildXmlProperty("osgi.runtime.dependencies")))
+			contents.addAll(wrapLine(1, "pluginFullVersion", getBuildGradleExtPluginFullVersion()))
 
 			String pluginPackaging = "war"
 
@@ -124,10 +123,10 @@ allprojects {
 				pluginPackaging = "jar"
 			}
 
-			contents.addAll(wrapProperty(1, "pluginPackaging", pluginPackaging))
+			contents.addAll(wrapLine(1, "pluginPackaging", pluginPackaging))
 
-			contents.addAll(wrapProperty(1, "portalDependencyTlds", pluginPackageProperties["portal-dependency-tlds"]))
-			contents.addAll(wrapProperty(1, "themeParent", getBuildXmlProperty("theme.parent")))
+			contents.addAll(wrapLine(1, "portalDependencyTlds", pluginPackageProperties["portal-dependency-tlds"]))
+			contents.addAll(wrapLine(1, "themeParent", getBuildXmlProperty("theme.parent")))
 
 			return wrapContents(contents, 0, " {", "ext", "}")
 		}
@@ -204,25 +203,29 @@ allprojects {
 				contents << content.substring(0, content.length() - 1)
 			}
 
-			contents << indent + rightClose
+			contents << getIndent(indentCount) + rightClose
 
 			return contents
 		}
 
-		wrapDependency = {
-			int indentCount, String group, String name, String version ->
+		wrapLine = {
+			Object[] params ->
 
-			return "${getIndent(indentCount)}[group: \"${group}\", name: \"${name}\", version: \"${version}\"],"
-		}
+			params[0] = getIndent(params[0])
 
-		wrapProperty = {
-			int indentCount, String name, String value = "" ->
-
-			if (value) {
-				return "${getIndent(indentCount)}${name} = \"${value}\""
+			if (params.size() == 2) {
+				return "${params[0]}files(\"${params[1]}\"),"
 			}
+			else if (params.size() == 3) {
+				if (params[2]) {
+					return "${params[0]}${params[1]} = \"${params[2]}\""
+				}
 
-			return []
+				return []
+			}
+			else if (params.size() == 4) {
+				return "${params[0]}[group: \"${params[1]}\", name: \"${params[2]}\", version: \"${params[3]}\"],"
+			}
 		}
 
 		writeBuildGradleFile = {
