--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,39 @@ import com.liferay.portal.kernel.util.ReleaseInfo
 apply from: "${gradle.lfrSdkDir}/versions.gradle"
 
 buildscript {
+	dependencies {
+		classpath([group: 'com.liferay.portal', name: 'portal-service', version: '7.0.0-SNAPSHOT'])
+	}
+
 	repositories {
 		maven {
 			url 'http://cdn.repository.liferay.com/nexus/content/groups/public'
 		}
 	}
+}
 
-	dependencies {
-		classpath([group: 'com.liferay.portal', name: 'portal-service', version: '7.0.0-SNAPSHOT'])
+repositories {
+	maven {
+		url 'http://cdn.repository.liferay.com/nexus/content/groups/public'
 	}
+}
+
+configurations {
+	portalWeb
+}
+
+dependencies {
+	portalWeb([group: 'com.liferay.portal', name: 'portal-web', version: '7.0.0-SNAPSHOT'])
+}
+
+task unzipCommonCss(type: Copy) {
+	from(zipTree(configurations.portalWeb.singleFile)) {
+		include "WEB-INF/tld/**/*"
+		include "html/css/common/**/*"
+		include "html/themes/**/*"
+	}
+
+	into "$rootDir/dist"
 }
 
 configure(allprojects) {
@@ -364,16 +388,11 @@ configure(
 
 	apply plugin: "war"
 
+	task buildCss(type: JavaExec)
+	task compile
+
 	Map projectCompileDependencies = gradle.compileDependencies.find {
 		project.path == it.projectPath
-	}
-
-	clean {
-		if (projectCompileDependencies) {
-			projectCompileDependencies["compile"].each {
-				dependsOn "${it}:clean"
-			}
-		}
 	}
 
 	dependencies {
@@ -386,6 +405,28 @@ configure(
 		if (!project.name.endsWith("-layouttpl") && !project.name.equals("portal-compat-shared")) {
 			compile project(":shared:portal-compat-shared")
 		}
+
+		configurations {
+			buildCssClasspath
+		}
+
+		buildCssClasspath(
+			[group: 'com.liferay', name: 'com.liferay.ruby.gems', version: '1.0.0-SNAPSHOT'],
+			[group: 'com.liferay.portal', name: 'portal-impl', version: '7.0.0-SNAPSHOT'],
+			[group: 'com.liferay.portal', name: 'portal-service', version: '7.0.0-SNAPSHOT'],
+			[group: 'com.liferay.portal', name: 'util-java', version: '7.0.0-SNAPSHOT'],
+			[group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.3'],
+			[group: 'commons-lang', name: 'commons-lang', version: '2.6'],
+			[group: 'commons-configuration', name: 'commons-configuration', version: '1.6'],
+			[group: 'javax.portlet', name: 'portlet-api', version: '2.0'],
+			[group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'],
+			[group: 'easyconf', name: 'easyconf', version: '0.9.5', transitive: false],
+			[group: 'org.apache.ant', name: 'ant', version: '1.8.2'],
+			[group: 'org.jruby', name: 'jruby-complete', version: '1.6.5'],
+			[group: 'org.mozilla', name: 'rhino', version: '1.7R4'],
+			[group: 'org.springframework', name: 'spring-web', version: '3.2.10.RELEASE'],
+			[group: 'struts', name: 'struts', version: '1.2.9']
+		)
 
 		providedCompile(
 			[group: 'com.liferay', name: 'aQute.bnd', version: '2.3.0'],
@@ -410,6 +451,38 @@ configure(
 			[group: 'postgresql', name: 'postgresql', version: '9.2-1002.jdbc4'])
 	}
 
+	buildCss {
+		args = [
+			"sass.dir=/",
+			"sass.docroot.dir=${projectDir}/docroot",
+			"sass.portal.common.dir=${rootDir}/dist/html/css/common"
+		]
+
+		classpath = configurations.buildCssClasspath
+
+		dependsOn compileJava
+
+		dependsOn rootProject.unzipCommonCss
+
+		main = "com.liferay.portal.tools.SassToCssBuilder"
+
+		onlyIf {
+			pluginSrcDir.equals(file("${projectDir}/docroot"))
+		}
+	}
+
+	clean {
+		if (projectCompileDependencies) {
+			projectCompileDependencies["compile"].each {
+				dependsOn "${it}:clean"
+			}
+		}
+	}
+
+	compile {
+		dependsOn compileJava
+	}
+
 	repositories {
 		maven {
 			url "http://cdn.repository.liferay.com/nexus/content/groups/public"
@@ -425,12 +498,10 @@ configure(
 	}
 
 	war {
+		dependsOn buildCss
+
 		doFirst {
 			destinationDir = file("${rootDir}/dist")
 		}
-	}
-
-	task compile {
-		dependsOn compileJava
 	}
 }
